clusters/one/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-website
  namespace: simple-website
spec:
  selector:
    app: simple-website
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
