clusters/one/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-website
  namespace: simple-website
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: simple-website.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-website
            port:
              number: 80
